# DiffAudit-Platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_WIKI.md  CONTRIBUTING.md  DEMO_FLOW_VERIFICATION.md  DEMO_READINESS_CHECKLIST.md  DEMO_VERIFICATION_REPORT.md  FRONTEND_EDGE_CASE_REPORT.md  FRONTEND_STATUS_SUMMARY.md  LICENSE  README.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  SECURITY_DECISION.md  TESTING_CHECKLIST.md  package-lock.json  package.json  test_frontend_edge_cases.py  test_frontend_manual.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/routes/: audit.py
apps/api/app/schemas/: audit.py
apps/api/tests/: test_health.py
deploy/: README.md  compose.env.example  compose.ghcr.env.example  docker-compose.example.yml  runtime.env.example
docs/: README.md  architecture.md  claude-autonomous-agent-prompt.md  code-package-index.md  code-submission-note.md  demo-preflight-checklist.md  docx-export-runbook.md  draft-sync-note-2026-04-14.md  engineering-to-4C-mapping.md  figma-workflow.md  final-candidate-engineering-audit.md  final-candidate-engineering-traceability.md  final-nonblocking-gap-check-2026-04-14.md  github-settings-baseline.md  merge-playbook.md  platform-roadmap.md  portability.md  pre-submit-engineering-verdict-2026-04-14.md  pre-submit-material-verdict-2026-04-14.md  pre-submit-signoff-2026-04-14.md  progress-sync-2026-04-17-platform-home-hero-and-particle.md  (+9 more)
(+367 files in other folders)
