[project]
name = "diffaudit-platform-api"
version = "0.1.0"
description = "FastAPI backend for the DiffAudit platform shell"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12"
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
